--- a/fixtures/variable.less
+++ b/fixtures/variable.less
@@ -3,3 +3,13 @@
 @import "./includes/b.css";
 
 @name: "value";
+
+.test-mixin() {
+	@test-var: 1;
+
+	.loop(@index) {
+		content: @index;
+	}
+
+	.loop();
+}
